[metadata]
name = nemo-sz
author = Matt Hilton + Nemo Contributors
author_email = matt.hilton@wits.ac.za
description = Millimeter-wave galaxy cluster and source detection package
long_description = file: README.rst
keywords = astrophysics
license = BSD 3-Clause
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX
    Topic :: Scientific/Engineering :: Astronomy

[versioneer]
VCS = git
style = pep440
versionfile_source = nemo/_version.py
versionfile_build = nemo/_version.py
tag_prefix = v
parentdir_prefix = nemo-

[options]
install_requires =
    astropy >= 4.0
    numpy >= 1.19, < 2
    matplotlib >= 3.10
    astLib >= 0.12.0
    pixell >= 0.17
    scipy >= 1.10
    pillow
    PyYAML
    #pyccl >= 3.0
    #mpi4py
    colorcet >= 1.0
    mahotas >= 1.4
